@@ -1,0 +1,54 @@
+# gdb helper for JIT development
+#
+#   Copyright (c) 2009  Higepon(Taro Minowa)  <higepon@users.sourceforge.jp>
+#
+#   Redistribution and use in source and binary forms, with or without
+#   modification, are permitted provided that the following conditions
+#   are met:
+#
+#   1. Redistributions of source code must retain the above copyright
+#      notice, this list of conditions and the following disclaimer.
+#
+#   2. Redistributions in binary form must reproduce the above copyright
+#      notice, this list of conditions and the following disclaimer in the
+#      documentation and/or other materials provided with the distribution.
+#
+#   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+#   "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+#   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+#   A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+#   OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+#   SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
+#   TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+#   PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+#   LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+#   NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+#   SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+# http://0xcc.net/blog/archives/000126.html
+set history save on
+set history size 10000
+set history filename ~/.gdb_history
+set print pretty on
+set print static-members off
+set charset ASCII
+
+# C++
+set print demangle on
+
+# VM registers
+display/x *(((intptr_t*)$rdi) + 1)
+display/s "VM::ac"
+
+display/x *(((intptr_t*)$rdi) + 4)
+display/s "VM::fp"
+
+display/x *(((intptr_t*)$rdi) + 5)
+display/s "VM::sp"
+
+display/x *(((intptr_t*)$rdi) + 6)
+display/s "VM::pc"
+
+display $rdx
+run
+
